# search_engine

./: .gitignore  CMakeLists.txt  class_implementation.cpp  headers.h  main.cpp  readmi.md
jsonFiles/: answers.json  config.json  requests.json
myTest/: myGtest.cpp
userFilesTXT/: About myself.txt  I go shopping.txt  Learning foreign languages.txt  My best friend.txt  My everyday meals.txt  My family.txt
